--- a/bootstrap/first.html
+++ b/bootstrap/first.html
@@ -69,6 +69,17 @@
                     </div>
                 </div>
             </div>
+
+            <div class="row">
+                <div class="first col-lg-2 col-md-3 col-sm-4 col-xs-6"></div>
+                <div class="second col-lg-2 col-md-3 col-sm-4 col-xs-6"></div>
+                <div class="third col-lg-2 col-md-3 col-sm-4 col-xs-6"></div>
+                <div class="fourth col-lg-2 col-md-3 col-sm-4 col-xs-6"></div>
+                <div class="fifth col-lg-2 col-md-3 col-sm-4 col-xs-6"></div>
+                <div class="sixth col-lg-2 col-md-3 col-sm-4 col-xs-6"></div>
+                <div class="seventh col-lg-2 col-md-3 col-sm-4 col-xs-6"></div>
+            </div>
+
             <div class="panel panel-primary">
                 <div class="panel-heading">
                     Students
